# alpha

./: .gitignore  GETTING_STARTED.md  QUICKSTART.md  README.md  TESTING.md  demo-success.json  demo_cli.py  demo_repl.py  final-demo-cfn.yml  final-demo-proposal.json  final-demo-tf.tf  hackathon.md  idea.md  pyproject.toml  real-fast-proposal.json  real-fast.tf  real-fast.yml  test-alpha.sh  test-cfn-patch.yml  test-proposal.json  test-smoke.sh  test-tf-patch.tf  test-with-lambda.sh  test_judge_mode.sh  test_mock_mode.sh
.github/workflows/: alpha-analyze-pr.yml  alpha-apply-merge.yml  alpha-ci-test.yml
action/: action.yml
agentcore_deploy/: main.py  pyproject.toml
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  DEMO_VIDEO_SCRIPT_FINAL.md  DEPLOYMENT_GUIDE.md  DIAGRAMS_README.md  SUBMISSION_CHECKLIST.md  agentcore_prompts.md  architecture_detailed.py  architecture_simple.py
examples/inputs/: sample-role-admin.json  sample-role-ci-runner.json  sample-role-data-pipeline.json
examples/outputs/: sample-proposal-admin.json
infra/: app.py  cdk.json  requirements.txt
infra/lib/: __init__.py  alpha_stack.py
lambdas/agentcore_runtime/: handler.py
lambdas/approval_checker/: handler.py
lambdas/bedrock_reasoner/: handler.py
lambdas/generate_policy/: handler.py
lambdas/guardrail/: handler.py
lambdas/rollout/: handler.py
scripts/: bootstrap_agentcore.sh
src/alpha_agent/: __init__.py  agentcore.py  agentcore_entrypoint.py  approvals.py  collector.py  diff.py  fast_collector.py  github.py  main.py  (+6 more)
workflows/: minimal_state_machine.asl.json  state_machine.asl.json
(+11 files in other folders)
